<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="routeName"
            type="String" />
        <variable
            name="viewModel"
            type="hu.kristof.nagy.hikebookclient.viewModel.mymap.MyMapDetailViewModel" />
        <variable
            name="context"
            type="android.content.Context" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="hu.kristof.nagy.hikebookclient.view.mymap.MyMapDetailFragment">

        <TextView
            android:id="@+id/myMapDetailRouteNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{routeName}"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Útvonal név" />

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/myMapDetailMap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myMapDetailRouteNameTv" />

        <Button
            android:id="@+id/myMapDetailDeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/delete_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:onClick="@{() -> viewModel.deleteRoute(routeName, context)}"
            app:icon="@drawable/delete_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/myMapDetailGroupHikeCreateButton"
            app:layout_constraintTop_toBottomOf="@+id/myMapDetailPrintButton" />

        <Button
            android:id="@+id/myMapDetailEditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/edit_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:icon="@drawable/edit_image"
            app:layout_constraintBottom_toTopOf="@+id/myMapDetailGroupHikeCreateButton"
            app:layout_constraintEnd_toStartOf="@+id/myMapDetailPrintButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myMapDetailMap" />

        <org.osmdroid.views.MapView
            android:id="@+id/myMapDetailMap"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/myMapDetailEditButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myMapDetailRouteNameTv"
            app:layout_constraintVertical_bias="1.0"
            tools:background="@drawable/map_image" />

        <Button
            android:id="@+id/myMapDetailPrintButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/print_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:icon="@drawable/print_image"
            app:layout_constraintBottom_toTopOf="@+id/myMapDetailDeleteButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/myMapDetailEditButton"
            app:layout_constraintTop_toBottomOf="@+id/myMapDetailMap" />

        <Button
            android:id="@+id/myMapDetailGroupHikeCreateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/group_hike_create_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/myMapDetailDeleteButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myMapDetailEditButton" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/myMapDetailHikePlanFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@+id/myMapDetailMap"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/hike_image"
            android:contentDescription="@string/hike_image_description"
            android:focusable="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
