...
    </fragment>
    <fragment
        android:id="@+id/myMapDetailFragment"
        android:name="hu.kristof.nagy.hikebookclient.view.mymap.MyMapDetailFragment"
        android:label="@string/my_map_detail_title" >
        <action
            android:id="@+id/action_myMapDetailFragment_to_myMapListFragment"
            app:destination="@id/myMapListFragment"
            app:popUpTo="@id/myMapDetailFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_myMapDetailFragment_to_routeEditFragment"
            app:destination="@id/routeEditFragment" />
...
